Fixed Table controls not appearing in center. Fixed Line Heights in LineItemDetails' PDF. Fixed Issue with Line wrapping in between of words(e.g.Fif\nty).

--- a/Start/WebContent/css/main.css
+++ b/Start/WebContent/css/main.css
@@ -283,3 +283,6 @@ body {
 .pageErrorMessage {
 	color:red;
 }
+.rf-dt-ftr-c {
+	text-align:center;
+}
